fix: Execute gap resolver code from workspace root
The generated code uses paths relative to the workspace root, not the
project folder. Changed working_dir from project_folder to None so
subprocess runs from the correct directory.

Results: 8/11 gaps now resolved successfully:
- C5, C6: Stock class/security type verification
- DQ1, DQ2, DQ3: Data completeness analysis
- I2, VAR1: Variable identification
- MATCH1, TEMP1, FIELD1: Matching methodology validation

Completeness score improved from 28 to 55.

--- a/research_intake_form.html
+++ b/research_intake_form.html
@@ -659,7 +659,7 @@
         <footer>
             <p>Research Project Intake System | <a href="https://giatenica.com" target="_blank">Gia Tenica</a></p>
             <p style="margin-top: 0.5rem; font-size: 0.75rem;">
-                Gia Tenica is an anagram for Agentic AI. Gia is a fully autonomous AI researcher.
+                Gia is a fully autonomous AI researcher.
             </p>
         </footer>
     </div>
